[tool.poetry]
name = "pythonbrasilbot"
version = "0.1.0"
description = ""
authors = ["Marco Rougeth <marco@rougeth.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
python-decouple = "^3.1"
aiohttp = "^3.5"
schedule = "^0.6.0"
loguru = "^0.2.5"
aiogram = "^2.2"

[tool.poetry.dev-dependencies]
ipython = "^7.5"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
ipdb = "^0.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
